# real-estate-pain-intelligence

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_system_state.py  0002_create_scrape_runs_and_raw_evidence.py  0003_run_orchestration_fields.py  0004_run_events_table.py  0005_raw_evidence_normalization_fields.py  0006_raw_evidence_multilingual_fields.py  0007_agent_insights_table.py  0008_retrieval_documents_table.py  0009_human_review_queue_table.py  0010_notion_sync_jobs_table.py  0011_export_jobs_table.py  0012_raw_evidence_ingestion_metadata.py  0013_export_artifact_metadata.py  0014_notion_real_sync_metadata.py  0015_retrieval_embed.py  0016_retrieval_pgvector.py  0017_users_table.py  0018_pain_point_fingerprints.py  0019_organizations.py  0020_session_notes_multi_source.py  0021_run_archiving.py
apps/api/app/: main.py
apps/api/app/core/: config.py  lifespan.py  logging.py  rate_limit.py  secrets.py  security.py  sentry.py
apps/api/app/db/: models.py  session.py
apps/api/app/dependencies/: common.py
apps/api/app/integrations/: __init__.py  notion_client.py
apps/api/app/models/: __init__.py  agent_insight.py  export_job.py  human_review_item.py  notion_sync_job.py  organization.py  pain_point_fingerprint.py  raw_evidence.py  retrieval_document.py  run_event.py  scrape_run.py  system_state.py  user.py
apps/api/app/schemas/: agent_insight.py  common.py  evidence.py  export.py  final_hardening.py  health.py  human_review.py  intelligence.py  meta.py  multilingual.py  normalization.py  (+7 more)
apps/api/tests/: conftest.py  test_agent_orchestrator.py  test_app_reviews_live_scraper.py  test_evidence.py  test_export.py  test_final_hardening.py  test_health.py  test_human_review.py  test_intelligence.py  test_meta.py  test_multilingual.py  test_normalization.py  test_notion_client.py  test_notion_sync.py  test_orchestrator.py  test_reddit_live_scraper.py  test_retrieval.py  test_review_sites_live_scraper.py  test_root.py  test_run_events.py  test_runs.py  test_scrape_execution.py  test_system_info.py  test_topic_modeling.py  test_x_live_scraper.py  test_youtube_live_scraper.py
(+98 files in other folders)
