[project]
name = "real-estate-pain-intelligence-api"
version = "0.1.0"
description = "Backend API for the Real Estate Pain Point Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"