[project]
name = "real-estate-pain-intelligence-api"
version = "0.1.0"
description = "Backend API for the Real Estate Pain Point Intelligence Platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "reportlab>=4.2.2"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]