[project]
name = "real-estate-pain-intelligence-api"
version = "0.1.0"
description = "Backend API for the Real Estate Pain Point Intelligence Platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "reportlab>=4.2.2",
  "pgvector>=0.4.2",
  "openai>=1.0.0",
  "arq>=0.25.0",
  "redis>=5.0.0",
  "slowapi>=0.1.9",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "prometheus-fastapi-instrumentator>=6.0.0",
  "sentry-sdk[fastapi]>=1.40.0",
  "email-validator>=2.1.0",
  "praw>=7.7.0",
  "google-play-scraper>=1.2.7",
  "yt-dlp>=2024.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]